Fix Mobile Menu Going Off Screen

--- a/css/main.scss
+++ b/css/main.scss
@@ -148,6 +148,7 @@ nav {
 .mobile-menu {
 	right: 0;
 	top: 0;
+	margin-right: 2em;
 }
 
 .mobile-menu-exit {
@@ -197,6 +198,12 @@ section {
 			font-weight: bold;
 		}
 	}
+}
+
+.hero-image {
+	margin-top: 2em;
+	width: 30%;
+	height: 50%;
 }
 
 @media only screen and (min-width: 768px) {
